--- a/styles/style.css
+++ b/styles/style.css
@@ -3,12 +3,11 @@ display: grid;
 justify-content:space-between ;
 align-content: space-evenly;
 margin: 92px 49px 0 51px;
-grid-template-columns: repeat(1, 388px 628px 240px); 
-grid-template-rows: repeat(1, 100%);  
+grid-template-columns: repeat (1, 388px 628px 240px); 
+grid-template-rows: repeat (1, 100%);  
 width: 1340px;
 height: 109px;
 flex-shrink: 0; 
-
 }
 
 
@@ -30,7 +29,6 @@ font-size: 18px;
 font-weight: 400;
 line-height: 1.35px;
 list-style-type: none; 
-
 }
 
 .links-list-item-active {
@@ -38,7 +36,6 @@ font-size: 18px;
 color: #131313;
 margin-left: 32px;
 list-style:circle; 
-
 }
 
 .link {
@@ -60,15 +57,13 @@ line-height: 1.35;
       height: 105px; 
       margin-left: 179px;
       margin-top: 11px;
-  }
+    }
 
   .header__address { 
     display: grid;
     margin: 16px 0 0 14px;
-    grid-template-columns: repeat(1, 100%); 
-  
-
-  }
+    grid-template-columns: repeat (1, 100%); 
+    }
 
   .links-list-adress {
    list-style:none;
@@ -76,9 +71,7 @@ line-height: 1.35;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 1.35; 
-  
-
+    line-height: 1.35;
   }
 
   .links-list-item-adress {
@@ -89,8 +82,6 @@ line-height: 1.35;
     font-weight: 400;
     line-height: 1.35; 
     text-underline-offset:4px;
-  
-
   }
   .adress {
     font-family: Raleway;
@@ -107,8 +98,6 @@ line-height: 1.35;
     background-color: rgb(0 0 0/0.6);
     height: 100%;
     width: 100%;
-   
-
 }
 
 .cover {
@@ -411,7 +400,7 @@ padding-left: 65px;
   font-style: normal;
   line-height: normal;
 }
-.main-about-text {
+.about-text {
   margin-bottom: 67px;
     padding-left: 66px;
 }
