--- a/styles/style.css
+++ b/styles/style.css
@@ -1,103 +1,106 @@
 .header {
-display: grid;
-justify-content:space-between ;
-align-content: space-evenly;
-margin: 92px 49px 0 51px;
-grid-template-columns: repeat(1, 388px 628px 240px);
-grid-template-rows: repeat(1, 100%);
-width: 1340px;
-height: 109px;
-flex-shrink: 0;
+  display: grid;
+  justify-content: space-between;
+  align-content: space-evenly;
+  margin: 92px 49px 0 51px;
+  grid-template-columns: repeat(1, 388px 628px 240px);
+  grid-template-rows: repeat(1, 100%);
+  width: 1340px;
+  flex-shrink: 0;
 }
-
 
 .header__menu {
-   display: flex;
-   margin: 43px 0 45px 0;
-  }
-
-.header__links-list {
-    display: flex;
-    flex-direction: row;
-    margin-left: -1px;
-    margin-top: 12px;
+  display: flex;
+  margin: 58px -5px 39px 4px;
 }
 
 
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  margin-left: -1px;
+  margin-top: 12px;
+}
+
 .links-list-item {
-font-size: 18px;
-font-weight: 400;
-line-height: 1.35px;
-list-style-type: none;
+  font-size: 18px;
+  color: #131313;
+  margin-left: 32px;
+  list-style: circle;
 }
 
 .links-list-item-active {
-font-size: 18px;
-color: #131313;
-margin-left: 32px;
-list-style:circle;
+  font-size: 18px;
+  font-weight: 400;
+  list-style-type: none;
 }
 
 .link {
-color: #131313;
-font-size: 18px;
-font-weight: 400;
-line-height: 1.35;
-
-
+  color: #131313;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.35;
 }
 
-   
 .logo {
-    display: block;
-  }
-  
+  display: block;
+}
+
 .logo-image {
   width: 148px;
   height: 105px;
-  margin-left: 179px;
-  margin-top: 11px;
-  }
+  margin-left: 169px;
+  margin-top: 27px;
+}
 
+.header-contacts {
+  margin-left: 3px;
+  margin-top: 34px;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px; /* 135% */
+}
 .header__address {
   display: grid;
   margin: 16px 0 0 14px;
   grid-template-columns: repeat (1, 100%);
-  }
+}
 
-  .links-list-adress {
-   list-style:none;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.35;
-  }
+.links-list-adress {
+  list-style: none;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.35;
+}
 
-  .links-list-item-adress {
-    text-decoration: none;
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.35;
-    text-underline-offset:4px;
-  }
-  .adress {
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.35;
-  }
-
+.links-list-item-adress {
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.35;
+  text-underline-offset: 4px;
+}
+.adress {
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.35;
+}
 
 .overlay {
-    position: absolute;
-    z-index: 0;
-    background-color: rgb(0 0 0/0.6);
-    height: 100%;
-    width: 100%;
+  position: absolute;
+  z-index: 0;
+  background-color: rgb(0 0 0/0.6);
+  height: 100%;
+  width: 100%;
 }
 
 .cover {
@@ -105,114 +108,108 @@ line-height: 1.35;
   background-position: center;
   background-size: cover;
   position: relative;
-  margin-top: 96px;
+  margin-top: 90px;
+  margin-left: -13px;
   width: 1440px;
-  height: 757px;
+  min-height: 757px;
   flex-shrink: 0;
 }
 
 .cover__title {
-position: relative;
-z-index: 1;
-display: grid;
-
+  position: relative;
+  z-index: 1;
+  display: grid;
 }
 
 .aligned-text {
-display: flex;
-justify-content: left;
-align-items: center;
-color: #FFF;
-font-family: Raleway;
-font-size: 100px;
-font-style: normal;
-font-weight: 700;
-line-height: 115%; /* 115px */
-letter-spacing: 22px;
-text-transform: uppercase;
-position: relative;
-z-index: 1;
-margin-top: 170px;
-margin-left: 70px;
-
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%; /* 115px */
+  letter-spacing: 22px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 1;
+  margin-top: 170px;
+  margin-left: 70px;
 }
 .aligned-text_center {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
   align-items: center;
-    color: #FFF;
+  color: #fff;
 
-    font-family: Raleway;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 115%; /* 115px */
-    letter-spacing: 24px;
-    text-transform: uppercase;
-    position: relative;
-    z-index: 1;
-    margin-top: 12px;
-margin-right: -5px;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%; /* 115px */
+  letter-spacing: 24px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 1;
+  margin-top: 12px;
+  margin-right: -5px;
 }
 
 .aligned-text_right {
-    display: flex;
-    justify-content: right;
+  display: flex;
+  justify-content: right;
   align-items: center;
-    color: #FFF;
-
-    font-family: Raleway;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 115%; /* 115px */
-    letter-spacing: 25px;
-    text-transform: uppercase;
-    position: relative;
-    z-index: 1;
-    margin-top: 4px;
-margin-right: 11px;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115%; /* 115px */
+  letter-spacing: 25px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 1;
+  margin-top: 4px;
+  margin-right: 11px;
 }
 
 .cover__description {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-content: space-evenly;
-    color: #FFF;
-    text-align: center;
-    position: relative;
-    z-index: 1;
-    width: 1440px;
-    height: 52px;
-    margin-top: 135px;
-    }
-
-.cover__description-text {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  font-family: Raleway;
+  justify-content: end;
+  align-content: space-evenly;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  width: 1440px;
+  margin-top: 135px;
+}
+
+.cover__description-text {
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
   line-height: 28px; /* 127.273% */
   text-transform: uppercase;
   text-align: center;
-  width: 638px;
-  height: 28px;
-  margin-right: 81px;
-  margin-top: 6px;
+  width: 633px;
+  margin-right: 79px;
+  margin-top: 4px;
+  word-spacing: 17px;
 }
 
 .bet-button {
   width: 257px;
-  height: 52px;
+  min-height: 52px;
   margin-right: 34px;
-  margin-top: -7px;
+  margin-top: -8px;
   border: 1px solid #fff;
   color: #fff;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 22px;
   font-style: normal;
@@ -220,23 +217,23 @@ margin-right: 11px;
   text-align: center;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .lots {
   display: grid;
-  
-width: 1340px;
-height: 579px;
-flex-shrink: 0;
-margin: 180px 50px  50px;
+  width: 1340px;
+  min-height: 579px;
+  flex-shrink: 0;
+  margin: 177px 50px 50px;
 }
 
 .lots__heading {
   margin-bottom: 30px;
   margin-top: 9px;
-  padding-left: 54px;
+  padding-left: 44px;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 40px;
   font-style: normal;
@@ -258,74 +255,77 @@ margin: 180px 50px  50px;
   position: relative;
   z-index: 0;
   width: 430px;
-  height: 450px;
+  min-height: 450px;
   background-image: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  flex-grow: 1;
-  margin-left: 14px;
-  margin-top: -5px;
 }
 
 .card__title {
-  color: #FFF;
+  color: #fff;
   padding-top: 51px;
   padding-left: 41px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
   line-height: 120%; /* 26.4px */
   text-decoration-line: underline;
   text-transform: uppercase;
-  position: absolute;
+  position: relative;
   z-index: 1;
 }
 
 .card__text {
-color: #FFF;
-font-family: Raleway;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 120%; /* 24px */
-position: absolute;
-z-index: 1;
-padding-top: 307px;
-padding-left: 40px;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 24px */
+  position: relative;
+  z-index: 1;
+  padding-top: 200px;
+  padding-left: 40px;
+  padding-bottom: 50px;
+  padding-right: 40px;
 }
 
 .card__text-book {
-  color: #FFF;
-  font-family: Raleway;
+  color: #fff;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%; /* 24px */
-  position: absolute;
+  position: relative;
   z-index: 1;
-  padding-top: 157px;
-   padding-left: 41px;
+  padding-top: 30px;
+  padding-left: 40px;
+  padding-bottom: 50px;
+  padding-right: 40px;
 }
 
 .card__text-picture {
-  color: #FFF;
-  font-family: Raleway;
+  color: #fff;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%; /* 24px */
-  position: absolute;
+  position: relative;
   z-index: 1;
-  padding-top: 207px;
-  padding-left: 39px;
+  padding-top: 77px;
+  padding-left: 40px;
+  padding-bottom: 50px;
+  padding-right: 40px;
 }
 
 .card_type_book {
   position: relative;
   z-index: 0;
   width: 430px;
-  height: 450px;
+  min-height: 450px;
   background-image: url(../images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -335,94 +335,97 @@ padding-left: 40px;
   position: relative;
   z-index: 0;
   width: 430px;
-  height: 450px;
+  min-height: 450px;
   background-image: url(../images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-
 .lots__look-more-link {
   display: block;
-  margin-top: 25px;
-  margin-left: 54px;
+  margin-top: 31px;
+  margin-left: 43px;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 20px;
   font-style: normal;
   line-height: normal;
 }
 
-
 .logo-white-div {
   width: 240px;
-  height: 240px;
-  margin-top: 188px;
-    margin-left: 103px;
+  min-height: 240px;
+  margin-top: 181px;
+  margin-left: 102px;
   border-radius: 50%;
   background-color: #000;
 }
 
 .logo-white {
   width: 148px;
-  height: 114px;
+  min-height: 114px;
   margin-top: 62px;
-  margin-left: 52px;
+  margin-left: 46px;
 }
 
-
 .about__heading {
-color: #000;
-font-family: Raleway;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-text-transform: uppercase;
-margin-bottom: 74px;
-margin-top: -13px;
-padding-left: 65px;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-bottom: 73px;
+  margin-top: -138px;
+  padding-left: 53px;
 }
 
 .about__text {
   display: flex;
   flex-direction: column;
   gap: 25px;
-  width: 885px;
+  min-width: 885px;
   margin-right: 50px;
   margin-left: 455px;
   text-align: left;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 20px;
   font-style: normal;
   line-height: normal;
 }
 .about-text {
-  margin-bottom: 67px;
-    padding-left: 66px;
+  margin-bottom: -25px;
+  padding-left: 54px;
 }
-
 
 .footer {
   display: flex;
   justify-content: space-between;
   width: 1340px;
-height: 97px;
-flex-shrink: 0;
-margin-left: 106px;
-margin-top: -86px;
+  flex-shrink: 0;
+  margin-left: 109px;
+  margin-top: -3px;
 }
 
 .nav-list {
   display: flex;
   flex-direction: column;
   gap: 0;
-  margin-top: 180px;
+  margin-top: 93px;
+  margin-left: 2px;
   text-align: center;
   list-style-type: none;
+  color: #000;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .footer__social-list {
@@ -431,11 +434,16 @@ margin-top: -86px;
   gap: 48px;
   width: 240px;
   height: 48px;
-  margin-top: 180px;
-  margin-right: 39px;
+  margin-top: 184px;
+  margin-right: 54px;
 }
 .footer-contacts {
   margin-top: 185px;
-  margin-left: -33px;
+  margin-left: -55px;
+  color: #000;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px; /* 135% */
 }
-
