--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   margin: 64px 41px 0 48px;
   grid-template-columns: repeat(1, 388px 628px 240px);
   grid-template-rows: repeat(1, 100%);
-  width: 1340px;
+  width: 1440px;
   flex-shrink: 0;
 }
 
@@ -13,7 +13,6 @@
   display: flex;
   margin: 58px -5px 39px 4px;
 }
-
 
 .header__links-list {
   display: flex;
@@ -49,24 +48,19 @@
 .logo-image {
   width: 148px;
   height: 105px;
-  margin-left: 169px;
+  margin-left: 125px;
   margin-top: 27px;
 }
 
 .header-contacts {
-  margin-left: 3px;
-  margin-top: 34px;
+  margin-left: -92px;
+  margin-top: 33px;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24.3px; /* 135% */
-}
-.header__address {
-  display: grid;
-  margin: 16px 0 0 14px;
-  grid-template-columns: repeat (1, 100%);
 }
 
 .links-list-adress {
@@ -87,6 +81,7 @@
   line-height: 1.35;
   text-underline-offset: 4px;
 }
+
 .adress {
   font-family: Raleway, sans-serif;
   font-size: 18px;
@@ -109,9 +104,10 @@
   background-size: cover;
   position: relative;
   margin-top: 90px;
-  width: 1440px;
+  margin-right: -177px;
   min-height: 757px;
   flex-shrink: 0;
+  width: 1440px;  
 }
 
 .cover__title {
@@ -130,13 +126,14 @@
   font-style: normal;
   font-weight: 700;
   line-height: 115%; /* 115px */
-  letter-spacing: 24px;
+  letter-spacing: 21px;
   text-transform: uppercase;
   position: relative;
   z-index: 1;
   margin-top: 170px;
-  margin-left: 58px;
+  margin-left: 61px;
 }
+
 .aligned-text_center {
   display: flex;
   justify-content: center;
@@ -147,12 +144,12 @@
   font-style: normal;
   font-weight: 700;
   line-height: 115%; /* 115px */
-  letter-spacing: 24px;
+  letter-spacing: 29px;
   text-transform: uppercase;
   position: relative;
   z-index: 1;
-  margin-top: 12px;
-  margin-right: 21px;
+  margin-top: 9px;
+  
 }
 
 .aligned-text_right {
@@ -170,7 +167,7 @@
   position: relative;
   z-index: 1;
   margin-top: 4px;
-  margin-right: 23px;
+  margin-right: 28px;
 }
 
 .cover__description {
@@ -195,16 +192,16 @@
   text-transform: uppercase;
   text-align: center;
   min-width: 633px;
-  margin-right: 79px;
-  margin-top: 4px;
-  word-spacing: 17px;
+  margin-right: 82px;
+  margin-top: 6px;
+  word-spacing: 18px;
 }
 
 .bet-button {
   width: 257px;
   min-height: 52px;
   margin-right: 44px;
-  margin-top: -8px;
+  margin-top: -7px;
   border: 1px solid #fff;
   color: #fff;
   font-family: Raleway, sans-serif;
@@ -220,8 +217,7 @@
 
 .lots {
   display: grid;
-  width: 1340px;
-  min-height: 579px;
+  width: 1440px;
   flex-shrink: 0;
   margin: 177px 55px 50px;
 }
@@ -248,6 +244,9 @@
   margin-left: 2px;
   list-style-type: none;
 }
+.cards {
+  margin-right: 100px;
+}
 
 .card_type_film {
   position: relative;
@@ -257,12 +256,16 @@
   background-image: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card__title {
   color: #fff;
   padding-top: 51px;
   padding-left: 41px;
+  padding-right: 20px;
   font-family: Raleway, sans-serif;
   font-size: 22px;
   font-style: normal;
@@ -283,40 +286,7 @@
   line-height: 120%; /* 24px */
   position: relative;
   z-index: 1;
-  padding-top: 200px;
-  padding-left: 40px;
-  padding-bottom: 50px;
-  padding-right: 40px;
-}
-
-.card__text-book {
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 120%; /* 24px */
-  position: relative;
-  z-index: 1;
-  padding-top: 30px;
-  padding-left: 40px;
-  padding-bottom: 50px;
-  padding-right: 40px;
-}
-
-.card__text-picture {
-  color: #fff;
-  font-family: Raleway, sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 120%; /* 24px */
-  position: relative;
-  z-index: 1;
-  padding-top: 77px;
-  padding-left: 40px;
-  padding-bottom: 50px;
-  padding-right: 40px;
+  padding: 0 40px 50px 40px;
 }
 
 .card_type_book {
@@ -327,6 +297,9 @@
   background-image: url(../images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card_type_picture {
@@ -337,6 +310,9 @@
   background-image: url(../images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .lots__look-more-link {
@@ -351,6 +327,9 @@
   line-height: normal;
 }
 
+.about {
+  width: 1440px;
+}
 .logo-white-div {
   width: 240px;
   min-height: 240px;
@@ -390,7 +369,7 @@
 }
 .about-text {
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -400,8 +379,9 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  width: 1340px;
+  width: 1440px;
   flex-shrink: 0;
+  gap: 365px;;
   margin-left: 109px;
   margin-top: -3px;
 }
@@ -411,11 +391,11 @@
   flex-direction: column;
   gap: 0;
   margin-top: 91px;
-  margin-left: 2px;
+  margin-left: -60px;
   text-align: center;
   list-style-type: none;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -429,13 +409,14 @@
   width: 240px;
   height: 48px;
   margin-top: 182px;
-  margin-right: 52px;
+  margin-right: 152px;
 }
+
 .footer-contacts {
   margin-top: 184px;
-  margin-left: -53px;
+  margin-left: -50px;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
