--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,25 @@
+
+*{ 
+  margin: 0; 
+  padding: 0; 
+} 
+
+html, body{ 
+  max-width: 1440px;
+  margin: 0 auto; 
+  padding: 0; 
+}
+
 .header {
   display: grid;
   justify-content: space-between;
   align-content: space-evenly;
-  margin: 64px 41px 0 48px;
   grid-template-columns: repeat(1, 388px 628px 240px);
   grid-template-rows: repeat(1, 100%);
   width: 1440px;
   flex-shrink: 0;
+  margin-top: 67px;
+  margin-left: 43px;
 }
 
 .header__menu {
@@ -82,7 +95,7 @@
   text-underline-offset: 4px;
 }
 
-.adress {
+.address {
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
@@ -104,10 +117,9 @@
   background-size: cover;
   position: relative;
   margin-top: 90px;
-  margin-right: -177px;
   min-height: 757px;
   flex-shrink: 0;
-  width: 1440px;  
+  min-width: 1440px;
 }
 
 .cover__title {
@@ -219,7 +231,7 @@
   display: grid;
   width: 1440px;
   flex-shrink: 0;
-  margin: 177px 55px 50px;
+  margin: 135px 50px 0px 50px;
 }
 
 .lots__heading {
@@ -240,10 +252,10 @@
   flex-direction: row;
   gap: 25px;
   justify-content: space-evenly;
-  margin-top: -7px;
-  margin-left: 2px;
+  margin-top: 27px;
   list-style-type: none;
 }
+
 .cards {
   margin-right: 100px;
 }
@@ -330,6 +342,7 @@
 .about {
   width: 1440px;
 }
+
 .logo-white-div {
   width: 240px;
   min-height: 240px;
@@ -381,9 +394,7 @@
   justify-content: space-between;
   width: 1440px;
   flex-shrink: 0;
-  gap: 365px;;
-  margin-left: 109px;
-  margin-top: -3px;
+  gap: 365px;
 }
 
 .nav-list {
@@ -391,7 +402,6 @@
   flex-direction: column;
   gap: 0;
   margin-top: 91px;
-  margin-left: -60px;
   text-align: center;
   list-style-type: none;
   color: #000;
@@ -414,7 +424,6 @@
 
 .footer-contacts {
   margin-top: 184px;
-  margin-left: -50px;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 18px;
